--- a/JJFMDBDemo/JJFMDBDemo.xcworkspace/xcshareddata/xcschemes/JJFMDBDemo.xcscheme
+++ b/JJFMDBDemo/JJFMDBDemo.xcworkspace/xcshareddata/xcschemes/JJFMDBDemo.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "1210"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "988D064F16B99CCDEFF0BB3706268687"
-               BuildableName = "libPods.a"
-               BlueprintName = "Pods"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "69B0D2D71BF9FA6700DAE25B"
+               BuildableName = "JJFMDBDemo.app"
+               BlueprintName = "JJFMDBDemo"
+               ReferencedContainer = "container:JJFMDBDemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,9 +28,27 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "69B0D2F01BF9FA6700DAE25B"
+               BuildableName = "JJFMDBDemoTests.xctest"
+               BlueprintName = "JJFMDBDemoTests"
+               ReferencedContainer = "container:JJFMDBDemo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "69B0D2FB1BF9FA6700DAE25B"
+               BuildableName = "JJFMDBDemoUITests.xctest"
+               BlueprintName = "JJFMDBDemoUITests"
+               ReferencedContainer = "container:JJFMDBDemo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +60,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "988D064F16B99CCDEFF0BB3706268687"
-            BuildableName = "libPods.a"
-            BlueprintName = "Pods"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "69B0D2D71BF9FA6700DAE25B"
+            BuildableName = "JJFMDBDemo.app"
+            BlueprintName = "JJFMDBDemo"
+            ReferencedContainer = "container:JJFMDBDemo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -60,15 +77,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "988D064F16B99CCDEFF0BB3706268687"
-            BuildableName = "libPods.a"
-            BlueprintName = "Pods"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "69B0D2D71BF9FA6700DAE25B"
+            BuildableName = "JJFMDBDemo.app"
+            BlueprintName = "JJFMDBDemo"
+            ReferencedContainer = "container:JJFMDBDemo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
