--- a/JJFMDBDemo/Podfile
+++ b/JJFMDBDemo/Podfile
@@ -1,7 +1,11 @@
 
-platform:ios,'6.0'
+platform:ios,'9.0'
 
 source 'https://github.com/CocoaPods/Specs.git'
 
-pod 'FMDB', '~> 2.2'
-pod 'JJSandBox', '~> 1.0.0'
+target 'JJFMDBDemo' do
+  
+  pod 'FMDB',   '2.7.5'
+
+end
+
